# acra-collector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASING.md  build-debian.sh
scripts/: view-last-logcat.sh
src/: main.rs
