[package]
name = "acra-collector"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/acra-collector/"
homepage = "https://github.com/dbrgn/acra-collector/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A small, simple ACRA backend written in Rust."

[dependencies]
env_logger = "0.4"
iron = "0.5"
lettre = "0.6"
router = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
