[package]
name = "acra-collector"
version = "0.2.0-dev"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/acra-collector/"
homepage = "https://github.com/dbrgn/acra-collector/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A small, simple ACRA backend written in Rust."

[dependencies]
env_logger = "0.7"
iron = "0.6"
lettre = { version = "0.10.0-alpha.1", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "log"] }
router = "0.6"
rustls = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
webpki-roots = "0.20"
